--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "molovo/journal",
-  "description": "A fully fledged blog admin module for Laravel 5.1+",
+  "description": "A content management module for Laravel 5.1+",
   "keywords": [
     "molovo",
     "journal"
